{
  "version": 4,
  "terraform_version": "1.1.0",
  "serial": 39,
  "lineage": "90228d9b-41f3-c626-7f71-9d8a19eb0346",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06be6646a4668d107",
            "domain": "vpc",
            "id": "eipalloc-06be6646a4668d107",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-18-225-3-153.us-east-2.compute.amazonaws.com",
            "public_ip": "18.225.3.153",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:731029650208:internet-gateway/igw-0213a88a820725a2a",
            "id": "igw-0213a88a820725a2a",
            "owner_id": "731029650208",
            "tags": {
              "Name": "iti_dev_igw"
            },
            "tags_all": {
              "Name": "iti_dev_igw"
            },
            "vpc_id": "vpc-03bb711d3b231b0ed"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06be6646a4668d107",
            "connectivity_type": "public",
            "id": "nat-0ca78b5a346bdbcde",
            "network_interface_id": "eni-02f4e9a2a81d865b5",
            "private_ip": "10.0.1.106",
            "public_ip": "18.225.3.153",
            "subnet_id": "subnet-03766780c82d05b2b",
            "tags": {
              "Name": "iti_dev_nat_gw"
            },
            "tags_all": {
              "Name": "iti_dev_nat_gw"
            }
          },
          "dependencies": [
            "aws_eip.main",
            "aws_internet_gateway.main",
            "aws_subnet.public1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:731029650208:route-table/rtb-0fcf0e5c6b2796b2a",
            "id": "rtb-0fcf0e5c6b2796b2a",
            "owner_id": "731029650208",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0ca78b5a346bdbcde",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "iti_dev_private_nat_rt"
            },
            "tags_all": {
              "Name": "iti_dev_private_nat_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-03bb711d3b231b0ed"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.main",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_subnet.public1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_pure",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:731029650208:route-table/rtb-0c133f7a5939161ed",
            "id": "rtb-0c133f7a5939161ed",
            "owner_id": "731029650208",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "iti_dev_private_pure_rt"
            },
            "tags_all": {
              "Name": "iti_dev_private_pure_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-03bb711d3b231b0ed"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:731029650208:route-table/rtb-0d9fda2e28a1ef0bc",
            "id": "rtb-0d9fda2e28a1ef0bc",
            "owner_id": "731029650208",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0213a88a820725a2a",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "iti_dev_public_rt"
            },
            "tags_all": {
              "Name": "iti_dev_public_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-03bb711d3b231b0ed"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_a2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05a2f6b693d81fa33",
            "route_table_id": "rtb-0c133f7a5939161ed",
            "subnet_id": "subnet-0334697ab8c6c2959"
          },
          "dependencies": [
            "aws_route_table.private_pure",
            "aws_subnet.private_a2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_b2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0df725827aed5c2b8",
            "route_table_id": "rtb-0c133f7a5939161ed",
            "subnet_id": "subnet-095331da347ddc887"
          },
          "dependencies": [
            "aws_route_table.private_pure",
            "aws_subnet.private_b2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_nat_a1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b1033ca83836e50d",
            "route_table_id": "rtb-0fcf0e5c6b2796b2a",
            "subnet_id": "subnet-0a21d6be0feea4d3d"
          },
          "dependencies": [
            "aws_eip.main",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private_nat",
            "aws_subnet.private_nat_a1",
            "aws_subnet.public1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_nat_b1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a0ecbd9a9b7acaf3",
            "route_table_id": "rtb-0fcf0e5c6b2796b2a",
            "subnet_id": "subnet-0b40e3a84032cb631"
          },
          "dependencies": [
            "aws_eip.main",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private_nat",
            "aws_subnet.private_nat_b1",
            "aws_subnet.public1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09109eb267ae51015",
            "route_table_id": "rtb-0d9fda2e28a1ef0bc",
            "subnet_id": "subnet-03766780c82d05b2b"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0804130101852154d",
            "route_table_id": "rtb-0d9fda2e28a1ef0bc",
            "subnet_id": "subnet-08c6f47c9e546ee6f"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_a2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:731029650208:subnet/subnet-0334697ab8c6c2959",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.5.0/24",
            "id": "subnet-0334697ab8c6c2959",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "731029650208",
            "tags": {
              "Name": "iti_dev_private_subneta2"
            },
            "tags_all": {
              "Name": "iti_dev_private_subneta2"
            },
            "vpc_id": "vpc-03bb711d3b231b0ed"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_b2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:731029650208:subnet/subnet-095331da347ddc887",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.6.0/24",
            "id": "subnet-095331da347ddc887",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "731029650208",
            "tags": {
              "Name": "iti_dev_private_subnetb2"
            },
            "tags_all": {
              "Name": "iti_dev_private_subnetb2"
            },
            "vpc_id": "vpc-03bb711d3b231b0ed"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_nat_a1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:731029650208:subnet/subnet-0a21d6be0feea4d3d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-0a21d6be0feea4d3d",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "731029650208",
            "tags": {
              "Name": "iti_dev_private_subneta1_nat"
            },
            "tags_all": {
              "Name": "iti_dev_private_subneta1_nat"
            },
            "vpc_id": "vpc-03bb711d3b231b0ed"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_nat_b1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:731029650208:subnet/subnet-0b40e3a84032cb631",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-0b40e3a84032cb631",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "731029650208",
            "tags": {
              "Name": "iti_dev_private_subnetb1_nat"
            },
            "tags_all": {
              "Name": "iti_dev_private_subnetb1_nat"
            },
            "vpc_id": "vpc-03bb711d3b231b0ed"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:731029650208:subnet/subnet-03766780c82d05b2b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-03766780c82d05b2b",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "731029650208",
            "tags": {
              "Name": "iti_dev_public_subnet1"
            },
            "tags_all": {
              "Name": "iti_dev_public_subnet1"
            },
            "vpc_id": "vpc-03bb711d3b231b0ed"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:731029650208:subnet/subnet-08c6f47c9e546ee6f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-08c6f47c9e546ee6f",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "731029650208",
            "tags": {
              "Name": "iti_dev_public_subnet2"
            },
            "tags_all": {
              "Name": "iti_dev_public_subnet2"
            },
            "vpc_id": "vpc-03bb711d3b231b0ed"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:731029650208:vpc/vpc-03bb711d3b231b0ed",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-08b59e49d4ee57ea9",
            "default_route_table_id": "rtb-0fe9bee267ff92bd8",
            "default_security_group_id": "sg-0903124395e32e42b",
            "dhcp_options_id": "dopt-05add46dd0e21f044",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-03bb711d3b231b0ed",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0fe9bee267ff92bd8",
            "owner_id": "731029650208",
            "tags": {
              "Name": "main"
            },
            "tags_all": {
              "Name": "main"
            }
          }
        }
      ]
    }
  ]
}